still trying to fix the issue. even if i make the dev tools mobile size, it is not visible. literally only on mobile devices it appears.

--- a/css/app.css
+++ b/css/app.css
@@ -644,7 +644,6 @@ p {
     width: 100%;
     height: 100%;
     position: absolute;
-    top: -40%;
     transform: skewY(-5deg);
     z-index: 1;
 }
